# stonks

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/anti-slop-architecture-reviewer/: SKILL.md
.agents/skills/anti-slop-code-architecture/: SKILL.md
.agents/skills/package-usage/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: agent-orchestrator.md  backup.toml  debug-investigator.md  default.toml  docs-driven-engineer.md  ebay-auth-incident-investigator.md  tacit-knowledge-capturer.toml
.codex/rules/: default.rules
.cursor/: hooks.json
.cursor/hooks/: python_quality_nudge.py  uv_shell_policy.py
.cursor/rules/: general-project-rule.mdc  no-trivial-wrapper-functions.mdc
apps/notebooks/: pyproject.toml
apps/notebooks/studies/: company_valuation_starter.py
apps/notebooks/studies/oracle_valuation/: 00_source_log_and_financial_extraction.ipynb  01_oci_rpo_and_ai_capacity_model.ipynb  02_database_apps_and_support_model.ipynb  03_ai_capacity_and_capex_options.ipynb  04_public_comps_and_market_implied_debate.ipynb  05_dcf_sotp_sensitivities_and_memo.ipynb  __init__.py  build_notebooks.py
apps/notebooks/studies/oracle_valuation/data/: market_premiums.csv  option_scenarios.csv  public_comps.csv  segment_assumptions.csv  source_log.csv
apps/notebooks/studies/spacex_ipo/: 00_source_log_and_sec_extraction.ipynb  01_starlink_model.ipynb  02_launch_starshield_ai_models.ipynb  03_starship_and_orbital_compute_options.ipynb  04_public_comps_and_market_premium.ipynb  05_sotp_sensitivities_and_memo.ipynb  __init__.py  build_notebooks.py
apps/notebooks/studies/tesla_valuation/: 00_source_log_and_financial_extraction.ipynb  01_auto_deliveries_and_margin_model.ipynb  02_energy_services_and_supercharging.ipynb  03_fsd_robotaxi_and_optimus_options.ipynb  04_public_comps_and_market_implied_debate.ipynb  05_dcf_sotp_sensitivities_and_memo.ipynb  __init__.py  build_notebooks.py
apps/notebooks/tests/: test_notebooks.py  test_oracle_notebook_builders.py  test_spacex_notebook_builders.py  test_tesla_notebook_builders.py
libs/benchmarks/: pyproject.toml
libs/benchmarks/src/benchmarks/: __init__.py  indexes.py
libs/benchmarks/tests/: test_benchmarks.py
libs/core/: pyproject.toml
libs/data/: pyproject.toml
libs/data/src/data/: __init__.py  cache.py  interfaces.py
libs/data/tests/: test_data.py
libs/valuation/: pyproject.toml
libs/valuation/src/valuation/: __init__.py  dcf.py  discounting.py  multiples.py  sotp.py
libs/valuation/tests/: test_implied_requirements.py  test_spacex_valuation_helpers.py  test_valuation.py
(+24 files in other folders)
