[project]
name = "stonks-workspace"
version = "0.1.0"
description = "Equity analysis tools, benchmarks, and valuation studies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"apps/notebooks/studies/spacex_ipo/*.ipynb" = ["E501", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["libs", "apps"]
python_files = ["test_*.py"]
