[project]
name = "benchmarks"
version = "0.1.0"
description = "Reusable benchmark definitions for equity studies."
requires-python = ">=3.12"
dependencies = [
    "core==0.1.0",
    "data==0.1.0",
    "numpy>=2.0",
    "pandas>=2.2",
]

[tool.uv.sources]
core = { workspace = true }
data = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
